5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1745_1523.log
== TEST (2019-05-15 14:06:36) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while (qi == 200):
	soma = soma + qi + qc - qd
	sem = sem + 1
print(sem)
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:08:08) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while (qi >= 0):
	soma = soma + qi + qc - qd
	sem = sem + 1
	if(qi == 200):
		print(sem)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:13) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while (qi >= 0):
	soma = soma + qi + qc - qd
	sem = sem + 1
	if(qi == 200):
		print(sem)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:41) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while (qi >= 0):
	soma = soma + qi + qc - qd
	sem = sem + 1
	if(qi == 200):
print(sem)

-- ERROR:
File "XXXX", line 10
    print(sem)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:57) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
if (qi >= 0):
	while(qi == 200):
		soma = soma + qi + qc - qd
		sem = sem + 1
	print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:15) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
if (qi >= 0):
	while(qi == 200):
		soma = soma + qi + qc - qd
		sem = sem + 1
	print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:22) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
if (qi >= 0):
	while(qi == 200):
		soma = soma + qi + qc - qd
		sem = sem + 1
	print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:35:04) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
if (qi >= 0):
	while(qi == 200):
		qi = qi + qc - qd
		sem = sem + 1
	print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:36:38) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
if (qi >= 0):
	while(qi == 200):
		qi = qi + qc 
		qi = qi - qc
		sem = sem + 1
	print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:36:58) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
if (qi >= 0):
	while(qi == 200):
		qi = qi + qc 
		qi = qi - qc
		sem = sem + 1
	print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:37:34) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
if (qi >= 0):
	while(qi == 200):
		qi = qi * qc - qd 
	
		sem = sem + 1
	print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:37:43) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
if (qi >= 0):
	while(qi == 200):
		qi = qi * qc - qd 
	
		sem = sem + 1
	print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:11) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
if (qi >= 0):
	while(qi == 200):
		qi = qi + (qi * qc) - qd 
	
		sem = sem + 1
	print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:15) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
if (qi >= 0):
	while(qi == 200):
		qi = qi + qc - qd
		sem = sem + 1
	print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:57) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
if (qi >= 0):
	while(qi >= 200):
		qi = qi + qc - qd
		sem = sem + 1
	print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:40:31) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
if (qi >= 0):
	while(qi >= 200):
		qi = qi + qc - qd
		sem = sem + 1
	   print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:02) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while(qi >= 200):
	qi = qi + qc 
	qi = qi - qd
	sem = sem + 1
print(sem)
		

-- ERROR:
File "XXXX", line 10
    print(sem)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:59) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while(qi >= 200):
   soma = soma + qi + qc - qd
	
	sem = sem + 1
print(sem)
		

-- ERROR:
File "XXXX", line 9
    sem = sem + 1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:10) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while(qi >= 200):
   soma = soma + qi + qc - qd
	sem = sem + 1
print(sem)
		

-- ERROR:
File "XXXX", line 8
    sem = sem + 1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:47) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while(qi >= 200):
	soma = soma + qi + qc - qd
	sem = sem + 1

print(sem)
		

-- ERROR:
File "XXXX", line 8
    sem = sem + 1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:19) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while(qi >= 200):
	soma = soma + qi + qc - qd
	sem = sem + 1

print(sem)
		

-- ERROR:
File "XXXX", line 8
    sem = sem + 1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:54) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while(qi >= 200):
	soma = soma + qi * qc - qd
	sem = sem + 1

print(sem)
		

-- ERROR:
File "XXXX", line 8
    sem = sem + 1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:20) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while(qi >= 200):
	soma = soma + qi - c * qd
	sem = sem + 1

print(sem)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + qi - c * qd
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:20) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while(qi >= 200):
	soma = soma + qi + qc
	soma = soma - qd
	sem = sem + 1

print(sem)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + qi - c * qd
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:38) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
soma = 0
while(qi >= 200):
	soma = soma + qi + qc
	soma = soma - qd
	sem = sem + 1
print(sem)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + qi - c * qd
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:33) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
cont = 0
soma = 0
while(qi >= 200):
	soma = soma + qi + qc
	soma = soma - qd
	sem = sem + 1
	cont = cont + 1
print(sem)
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + qi - c * qd
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:40) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
cont = 0
soma = 0
while(qi <= 200):
	soma = soma + qi + qc
	soma = qi - qd
	sem = sem + 1
	cont = cont + 1
print(sem)
print(cont)


-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:15) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 

soma = 0
while(qi <= 200):
	soma = soma + qi + qc
	soma = qi - qd
	sem = sem + 1
	
print(sem)



-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:54) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 

soma = 0
while(qi <= 200):
	soma = soma + qi + qc
	soma = qi - qd
	sem = sem + 1
	print(sem)



-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:30) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 

soma = 0
while(qi <= 200):
	soma = soma + qi + qc
	soma = qi - qd
	sem = sem + 1
print(sem)



-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:52) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 

soma = 0
while(qi >=   200):
	soma = soma + qi + qc
	soma = qi - qd
	sem = sem + 1
print(sem)



-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:01:14) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 

soma = 0
while(qi > 0):
	soma = soma + qi + qc
	soma = qi - qd
	sem = sem + 1
	if (qi >= 200):
		print(sem)




-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:05:18) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
baloes = 0
while (qi <200):
	baloes = baloes + qi + qc
	baloes = baloes - qc
	sem = sem + 1
print(baloes)
	




-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:05:28) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
baloes = 0
while (qi <200):
	baloes = baloes + qi + qc
	baloes = baloes - qc
	sem = sem + 1
print(sem)
	




-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:05:55) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
baloes = 0
while (qi <200):
	baloes = baloes + qi + qc
	baloes = baloes - qc
	sem = sem + 1
print(sem)
	




-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:06:36) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
baloes = 0
while (qi <200):
	baloes = baloes + qi + qc
	baloes = baloes - qc
	sem = sem + 1
print(sem)
	




-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:06:47) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
baloes = 0
while (qi <200):
	baloes = baloes + qi + qc
	baloes = baloes - qc
	sem = sem + 1
print(sem)
	




-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:07:26) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
baloes = 0
while (qi <200):
	baloes = baloes + qi + qc - qd
	
	sem = sem + 1
print(sem)
	




-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:07:57) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
baloes = 0
while (qi <200):
	baloes = baloes + (qi+ qc)- qd
	
	sem = sem + 1
print(sem)
	




-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:09:17) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
cont = 0 
soma = 0 
while (qi <200):
	soma = soma + qi + qc - qd
	cont = cont + 1
print(sem)
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(sem)
NameError: name 'sem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:07) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (soma < 200):
	qi = qc - qd
	soma = soma + qi 
	cont = cont + 1
print(cont)
	




-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:31) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (soma < 200):
	qi = qc - qd
	soma = soma + qi 
	cont = cont + 1
print(cont)
	




-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:17:17) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (soma < 200):
	qi = qc - qd
	soma = soma + qi 
	cont = cont + 1
print(cont)
	




-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:17:32) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (soma < 200):
	qi = qc - qd
	soma = soma + qi 
	cont = cont + 1
print(cont)
	




-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:29) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (soma < 200):
	soma = qc - qd + qi
	
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:50) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (soma < 200):
	soma = soma + qc - qd + qi
	
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:20) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (soma < 200):
	soma = soma + qc + qi
	soma = soma - qd
	
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:31) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
qi = qi + qc
soma = 0 
cont = 0
while (soma < 200):
	soma = soma + qi - qd
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:20:50) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
qi = qi + qc
soma = 0 
cont = 0
while (soma < 200):
	soma = soma + qi - qd
	cont = cont + 1
print(cont)
	




-- EXECUTION TIME:
1.21354
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
1
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:21:30) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))

soma = 0 
cont = 0
while (soma < 200):
	soma = soma + qi - qd + qi
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:21:42) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))

soma = 0 
cont = 0
while (soma < 200):
	soma = soma + qi - qd 
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:22:34) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (soma < 200):
	soma = soma + qi * qc - qd 
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:04) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (soma < 200):
	soma = soma + qi + qc - qd 
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:47) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (soma < 200):
	qi = qi + qi + qc - qd 
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:03) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (soma < 200):
	qi =  qi + qc - qd 
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:18) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (qi < 200):
	qi =  qi + qc - qd 
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:28) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (qi < 200):
	qi =  qi + qc - qd 
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:39) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (qi < 200):
	qi =  qi + qc - qd 
	cont = cont + 1
print(cont)
	




-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:24:51) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (qi < 200):
	qi =  qi + qc - qd 
	cont = cont + 1
print(cont)
	




-- EXECUTION TIME:
1.21223
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:35:01) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
baloes = 0
while (qi <200):
	baloes = baloes + qi + qc
	baloes = baloes - qc
	sem = sem + 1
print(sem)
	




-- EXECUTION TIME:
0.251786
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:36:01) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
baloes = 0
while (qi <200):
	baloes = baloes + qi + qc
	baloes = baloes - qc
	sem = sem + 1
print(sem)
	




-- EXECUTION TIME:
0.32974
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:36:01) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
baloes = 0
while (qi <200):
	baloes = baloes + qi + qc
	baloes = baloes - qc
	sem = sem + 1
print(sem)
	




-- EXECUTION TIME:
0.412864
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:37:01) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
sem = 0 
baloes = 0
while (qi <200):
	baloes = baloes + qi + qc
	baloes = baloes - qc
	sem = sem + 1
print(sem)
	




-- EXECUTION TIME:
0.665218
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:39:01) 
-- CODE:
qi = int(input("quantidade inicial de baloes: "))
qc = int(input("novos baloes: "))
qd = int(input("baloes destruidos: "))
soma = 0 
cont = 0
while (soma < 200):
	qi = qc - qd
	soma = soma + qi 
	cont = cont + 1
print(cont)
	




-- EXECUTION TIME:
1.14426
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
12
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
3
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
